--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     height: 50px;
 }
 
- img{
+img{
     width: 30px;
     height: 30px;
 }
@@ -35,9 +35,9 @@ body{
 }
 
 .left-side{
-    padding-left: 30px;
+    padding-left: 15px;
     padding-top: 30px;
-    background-color: #a78bfa;
+    background-color:#b91c1c;
     color: black;
     display: grid;
     grid-template-rows: 100px 350px 100px;
@@ -65,29 +65,118 @@ body{
 .top-bar{
     background-color: white;
     padding: 10px;
+    padding-left: 40px;
+    padding-right: 50px;
 }
+
+input{
+    background-color: #ffe4e6;
+    border: none;
+    border-radius: 20px;
+    width: 500px;
+}
+
+.top-top .account-icon{
+    height: 50px;
+    width: 50px;
+    border-radius: 100px;
+}
+.bottom-bottom .account-icon{
+    height: 70px;
+    width: 70px;
+    border-radius: 100px;
+}
+
 .top-top{
     display: grid;
-    grid-template-columns: 100px 500px 20px 20px 200px;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.left{
+    display: flex;
+}
+
+.right{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 10px;
 }
 
 .bottom-bottom{
     display: grid;
-    grid-template-columns: 20px 100px 200px 100px 100px 100px ;
+    grid-template-columns: 100px 300px 1fr;
+    align-items: center;
+}
+
+.btns{
+    display: flex;
+    justify-content: end;
+    gap: 50px;
+}
+
+button{
+    background-color: #fee2e2;
+    border: none;
+    border-radius: 30px;
+    height: 50px;
+    width: 100px;
+    font-size: 20px;
+}
+
+.account-name{
+    justify-self: end;
 }
 
 .main-content{
     display: grid;
     grid-template-columns: 4fr 1fr;
-    background-color: #4c1d95;
-    padding: 10px;
+    background-color: #fee2e2;
+    padding: 7px;
+    gap: 7px;
 }
 
 .cards{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 10px;
+    padding: 5px;
+    
 }
 
 .card{
-    background-color: #c4b5fd;
+    background-color: #fca5a5;
+    border-radius: 20px;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 5px 5px 5px black ;
 }
+
+.icons{
+    display: flex;
+    justify-content: end;
+    padding-right: 10px;
+}
+
+.announcements{
+    background-color: #fca5a5;
+    border-radius: 20px;
+    padding-left: 7px;
+    box-shadow: 5px 5px 5px black ;
+}
+
+.trending{
+    background-color: #fca5a5;
+    border-radius: 20px;
+    padding-left: 7px;
+    box-shadow: 5px 5px 5px black ;
+}
+
+.side{
+    padding-right: 10px;
+}
+
