--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img{
 .left-side{
     padding-left: 15px;
     padding-top: 30px;
-    background-color:#b91c1c;
+    background-color:#ef4444;
     color: black;
     display: grid;
     grid-template-rows: 100px 350px 100px;
@@ -74,8 +74,22 @@ input{
     border: none;
     border-radius: 20px;
     width: 500px;
+    font-family: MPLUS1p-regular;
+    font-size: 20px;
 }
 
+input:focus{
+    outline: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.greeting{
+    font-size: 20px;
+}
 .top-top .account-icon{
     height: 50px;
     width: 50px;
@@ -126,6 +140,14 @@ button{
     font-size: 20px;
 }
 
+button:hover{
+    background-color: black;
+    color: white;
+    transition-duration: 0.7ms;
+    border: 3px solid red;
+}
+
+
 .account-name{
     justify-self: end;
 }
@@ -135,25 +157,33 @@ button{
     grid-template-columns: 4fr 1fr;
     background-color: #fee2e2;
     padding: 7px;
-    gap: 7px;
+    gap: 15px;
 }
 
 .cards{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 10px;
-    padding: 5px;
+    margin-top: 15px
     
 }
 
 .card{
-    background-color: #fca5a5;
-    border-radius: 20px;
-    padding-left: 10px;
+    background-color: white;
+    box-shadow: 4px 4px 4px black;
+    display: grid;
+    grid-template-columns: 10px 1fr;
+}
+
+.right-part{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 5px 5px 5px black ;
+    padding-left: 15px;
+}
+
+.left-color{
+    background-color: red;
 }
 
 .icons{
@@ -163,20 +193,15 @@ button{
 }
 
 .announcements{
-    background-color: #fca5a5;
-    border-radius: 20px;
+    background-color: white;
     padding-left: 7px;
-    box-shadow: 5px 5px 5px black ;
+    box-shadow: 4px 4px 4px black;
 }
 
 .trending{
-    background-color: #fca5a5;
-    border-radius: 20px;
+    background-color: white;
     padding-left: 7px;
-    box-shadow: 5px 5px 5px black ;
+    box-shadow: 4px 4px 4px black ;
 }
 
-.side{
-    padding-right: 10px;
-}
 
